Bug 321860 - nepomukinexer/strigi fails on encrypted spreadsheets
Summary: nepomukinexer/strigi fails on encrypted spreadsheets
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: fileindexer (other bugs)
Version First Reported In: 4.10.80
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Nepomuk Bugs Coordination
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-02 14:13 UTC by luisfe
Modified: 2013-07-09 08:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
a problematic file (9.78 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-07-02 17:27 UTC, luisfe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description luisfe 2013-07-02 14:13:47 UTC
I have a spreadsheet created with libreoffice that is encrypted. I receive tons of errors from nepomuk

nepomukindexer(12934)/nepomuk (strigi service): SimpleIndexerError:  "The resource with URI nepomuk:/res/4701122d-2119-4b8c-8630-2aff97fdbc49 is invalid."

The URI corresponed to this spreadsheet 

Reproducible: Always

Steps to Reproduce:
1. Create an encrypted spreadsheet with libreoffice
2.
3.
Actual Results:  
Tons of errors from nepomukindexer

Expected Results:  
nepomukindexer may raise an error once, but should not constantly throw the same error continuously
Comment 1 Vishesh Handa 2013-07-02 16:16:48 UTC
Could you perhaps upload any one of these encrypted spreadsheets?
Comment 2 luisfe 2013-07-02 17:27:44 UTC
Created attachment 80902 [details]
a problematic file

This file throws the error.
Comment 3 Vishesh Handa 2013-07-09 08:39:53 UTC
Git commit 2cf3c2148389f4397ed7d0873a2821a85bc283b1 by Vishesh Handa.
Committed on 08/07/2013 at 08:15.
Pushed by vhanda into branch 'master'.

Office Extractor: Do not store empty resources

This used to make encryped document files give an error during indexing,
because a SimpleResource with just a uri would be pushed, and that is
invalid.

M  +3    -0    services/fileindexer/indexer/odfextractor.cpp
M  +3    -0    services/fileindexer/indexer/office2007extractor.cpp

http://commits.kde.org/nepomuk-core/2cf3c2148389f4397ed7d0873a2821a85bc283b1