Office Extractor: Do not store empty resources

This used to make encryped document files give an error during indexing,
because a SimpleResource with just a uri would be pushed, and that is
invalid.

BUG: 321860